docs/versioned_docs/version-3.0.0-LTS/build-with-ai/overview.md
---
id: overview
title: Overview
---
With ToolJet, you can build business applications effortlessly using natural language. Whether you're starting from scratch or refining an existing app, it simplifies the process with it's intelligence.

Additionally, it comes with an AI-powered [documentation assistant](/docs/build-with-ai/ai-docs-assistant), ready to answer any questions about ToolJet's features, components, and integrations, helping you build faster.

Follow these step-by-step instructions to create an inventory management application:
1. **Describe your application** – Provide a prompt detailing the business application you want to create. (Example: "Inventory management system for a manufacturing company.")
<div style={{textAlign: 'center',  marginBottom:'15px'}}>

<img className="screenshot-full" src="/img/tooljet-ai/overview-ai-1.png" alt="tooljet ai overview" />
 
</div>
2. **Refine the requirements** – Review and accept or modify the application requirements suggested.
<div style={{textAlign: 'center',  marginBottom:'15px'}}>

<img className="screenshot-full" src="/img/tooljet-ai/overview-ai-2.png" alt="tooljet ai overview" />
 
</div>
3. **Customize your application** – Use AI to customize the generated application to your specific needs, adjusting components and its styles, and also data source queries.

- **Generated Application**
<div style={{textAlign: 'center',  marginBottom:'15px'}}>

<img className="screenshot-full" src="/img/tooljet-ai/overview-ai-3.png" alt="tooljet ai overview" />
 
</div>

- **Customizing Application**

<div style={{textAlign: 'center',  marginBottom:'15px'}}>

<img className="screenshot-full" src="/img/tooljet-ai/overview-ai-4.png" alt="tooljet ai overview" />
 
</div>


Refer to [Generate Applications](/docs/build-with-ai/generate-applications) and [AI Docs Assistant](/docs/build-with-ai/ai-docs-assistant) documentation to learn more.