docs/versioned_docs/version-3.16.0-LTS/build-with-ai/overview.md
---
id: overview
title: Overview
---
With ToolJet, you can build business applications effortlessly using natural language. Whether you're starting from scratch or refining an existing app, it simplifies the process with it's intelligence.

Additionally, it comes with an AI-powered [documentation assistant](/docs/build-with-ai/ai-docs-assistant), ready to answer any questions about ToolJet's features, components, and integrations, helping you build faster.

## AI App Generation

Follow these step-by-step instructions to create an inventory management application:
1. **Describe your application** – Provide a prompt detailing the business application you want to create. (Example: "Inventory management system for a manufacturing company.")
    <img className="screenshot-full img-full" style={{ marginTop: '15px' }} src="/img/tooljet-ai/overview-ai-1.png" alt="tooljet ai overview" />
2. **Refine the requirements** – Review and accept or modify the application requirements suggested.
    <img className="screenshot-full img-ful" style={{ marginTop: '15px' }} src="/img/tooljet-ai/overview-ai-2.png" alt="tooljet ai overview" />   
3. **Customize your application** – Use AI to customize the generated application to your specific needs, adjusting components and styles, and also data source queries.
    - **Generated Application**
        <img className="screenshot-full img-full" style={{ marginTop: '15px' }} src="/img/tooljet-ai/overview-ai-3.png" alt="tooljet ai overview" />
    - **Customizing Application**
        <img className="screenshot-full img-full" style={{ marginTop: '15px' }} src="/img/tooljet-ai/overview-ai-4.png" alt="tooljet ai overview" />

Refer to [Generate Applications](/docs/build-with-ai/generate-applications) and [AI Docs Assistant](/docs/build-with-ai/ai-docs-assistant) documentation to learn more.


## AI Configuration

ToolJet provides three ways to power AI capabilities in your workspace, depending on your infrastructure and cost requirements:

- **[ToolJet Managed AI](/docs/build-with-ai/ai-credits)**: AI requests are routed through ToolJet AI Cloud and billed against your workspace's ToolJet AI credits. No setup required.
- **[Bring Your Own Key (BYOK)](/docs/build-with-ai/bring-your-own-key)**: Configure your own LLM API key to use ToolJet's AI features without consuming ToolJet AI credits. Requests are processed via ToolJet AI Cloud.
- **[ToolJet AI Enterprise](/docs/build-with-ai/tj-ai-enterprise)**: Host your own AI server using the ToolJet-provided server image and bring your own LLM API key. No data leaves your infrastructure.
